<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vs_txt">V.S.</string>
    <string name="whowins_txt">Who will win?</string>
    <string name="welcome_txt">Welcome</string>
    <string name="instructions_txt">Select rock, paper or scissors at the bottom to play</string>
    <string name="scissors_txt">Scissors</string>
    <string name="rock_txt">Rock</string>
    <string name="paper_txt">Paper</string>
    <string name="win_txt">YOU WIN!</string>
    <string name="lose_txt">YOU LOSE!</string>
    <string name="draw_txt">Its a draw</string>
    <string name="you_txt">You</string>
    <string name="computer_txt">Computer</string>
    <string name="outcome_txt">Outcome</string>
    <string name="date_txt">Date</string>
    <string name="prev_text">See previous matches</string>
    <string name="back_txt">Back</string>
    <string name="clear_txt">Clear History</string>
</resources>